--- a/lab_esp32_micropython_project.adoc
+++ b/lab_esp32_micropython_project.adoc
@@ -46,6 +46,8 @@ In the remaining time allocated by the professor, develop one or more small proj
 
 Write here the location of the project in your repository, and describe the main purpose and functionnalities of your project in its `README.md` file.
 
+Location to the small integrated project - esp32_micropython_project\Project-Web Interface to toggle GPIO-LED
+
 Some simple ideas:
 
 * Make the led color vary based on the potentiometer value
